исправлена кодировка файлов .txt

--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -1,6 +1,6 @@
-1. Именование классов по БЭМ
-2. Создание новой ветки:
-feature/название ветки
+1. РРјРµРЅРѕРІР°РЅРёРµ РєР»Р°СЃСЃРѕРІ РїРѕ Р‘Р­Рњ
+2. РЎРѕР·РґР°РЅРёРµ РЅРѕРІРѕР№ РІРµС‚РєРё:
+feature/РЅР°Р·РІР°РЅРёРµ РІРµС‚РєРё
 
-например добавляем ветку с шапкой:
+РЅР°РїСЂРёРјРµСЂ РґРѕР±Р°РІР»СЏРµРј РІРµС‚РєСѓ СЃ С€Р°РїРєРѕР№:
 git checkout -b feature/header
